view/temperature_sensors.json - Adjusted resource names to work with sys::Path::getXXX so resources could be pulled from the local path or the system paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,6 @@ add_executable(temp_control src/App.cpp src/main.cpp)
 target_link_libraries(temp_control PRIVATE SDL2::SDL2 SDL2_ttf::SDL2_ttf SDL2_image::SDL2_image bpl_sys bpl_graphics)
 
 install(PROGRAMS temp_control DESTINATION bin)
-install(DIRECTORY resources/fonts DESTINATION fonts)
-install(DIRECTORY resources/ui DESTINATION games)
-install(DIRECTORY resources/views DESTINATION games)
+install(DIRECTORY resources/fonts DESTINATION share)
+install(DIRECTORY resources/ui DESTINATION share/games/temp_control)
+install(DIRECTORY resources/views DESTINATION share/games/temp_control)
