- Added layout for system menu - Added system menu (can enter and exit, no support for display or program settings) - Added ability to enter system menu - Added ability to exit via controller

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,16 @@ find_package(SDL2_ttf REQUIRED CONFIG REQUIRED COMPONENTS SDL2_ttf)
 find_package(SDL2_image REQUIRED CONFIG REQUIRED COMPONENTS SDL2_image)
 find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
 
-include_directories("../libbpl_graphics/libbpl_graphics/include" ../pinode/libpinode/include ../libbpl_net/libbpl_net/include ../libbpl_sys/libbpl_sys/include ../libbpl_storage/libbpl_storage/include)
+include_directories(BEFORE ../libbpl_graphics/libbpl_graphics/include
+        ../pinode/libpinode/include
+        ../libbpl_net/libbpl_net/include
+        ../libbpl_sys/libbpl_sys/include
+        ../libbpl_storage/libbpl_storage/include
+        ../libbpl_controls/libbpl_controls/include)
 
-add_executable(temp_control src/App.cpp src/main.cpp src/SensorUpdater.cpp src/ScreenSensor.cpp)
+add_executable(temp_control src/App.cpp src/main.cpp src/SensorUpdater.cpp src/ScreenSensor.cpp src/SystemMenu.cpp src/SystemMenuLogic.cpp)
 
-target_link_libraries(temp_control PRIVATE SDL2::SDL2 SDL2_ttf::SDL2_ttf SDL2_image::SDL2_image bpl_sys bpl_graphics pinode fmt bpl_net devices_dht22)
+target_link_libraries(temp_control PRIVATE SDL2::SDL2 SDL2_ttf::SDL2_ttf SDL2_image::SDL2_image bpl_sys bpl_controls bpl_graphics pinode fmt bpl_net devices_dht22)
 
 install(TARGETS temp_control DESTINATION bin)
 install(DIRECTORY resources/fonts DESTINATION share)
